cabal-version:       2.4
name:                policeman
version:             0.0.0.0
synopsis:            Bristol Hackathon project
description:         Bristol Hackathon project
homepage:            https://github.com/kowainik/policeman
bug-reports:         https://github.com/kowainik/policeman/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020 Kowainik
category:            PVP, Package Management, Cabal, Development
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/policeman.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , relude ^>= 0.6.0.0

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -fhide-source-paths

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Policeman
                         Policeman.Cabal
                         Policeman.Cli
                         Policeman.ColorTerminal
                         Policeman.Core.Package
                         Policeman.Run

                         -- downloading
                         Policeman.Download.Common
                         Policeman.Download.Hackage
  autogen-modules:     Paths_policeman
  other-modules:       Paths_policeman

  build-depends:       ansi-terminal >= 0.8
                     , Cabal ^>= 3.0.0.0
                     , directory ^>= 1.3
                     , filepath ^>= 1.4
                     , gitrev ^>= 1.3
                     , mtl ^>= 2.2.2
                     , optparse-applicative ^>= 0.15
                     , shellmet ^>= 0.0.3.0
                     , text ^>= 1.2.4

executable policeman
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       policeman

test-suite policeman-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       policeman

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N